adding sizez on col component

--- a/newworkspace/glotrix/apps/store/src/app/app.component.html
+++ b/newworkspace/glotrix/apps/store/src/app/app.component.html
@@ -1,7 +1,7 @@
 <glotrix-container>
   <glotrix-row>
-    <glotrix-col>a</glotrix-col>
-    <glotrix-col>b</glotrix-col>
+    <glotrix-col [md]='8' [xs]='12'>a</glotrix-col>
+    <glotrix-col [md]='4' [xs]='6'>b</glotrix-col>
   </glotrix-row>
 </glotrix-container>
 <router-outlet></router-outlet>
