--- a/newworkspace/glotrix/libs/ui/components/navigation/src/lib/top-bar/top-bar.component.html
+++ b/newworkspace/glotrix/libs/ui/components/navigation/src/lib/top-bar/top-bar.component.html
@@ -3,5 +3,5 @@
             aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <glotrix-img-rounded class="right-padding" [source]="'https://m.media-amazon.com/images/S/aplus-media/mg/dbf4301f-af40-46f2-9a87-a99deddcd9a2._SL300__.jpg'"></glotrix-img-rounded>
+    <glotrix-img-rounded class="right-padding  float-right" [source]="'https://m.media-amazon.com/images/S/aplus-media/mg/dbf4301f-af40-46f2-9a87-a99deddcd9a2._SL300__.jpg'"></glotrix-img-rounded>
 </nav>
