--- a/newworkspace/glotrix/libs/ui/components/navigation/src/lib/side-bar/side-bar.component.scss
+++ b/newworkspace/glotrix/libs/ui/components/navigation/src/lib/side-bar/side-bar.component.scss
@@ -1,47 +1,48 @@
-.blue-background {
-  background-color: #002E50 ;
-}
 :host {
-background: #343a40;
+  background: #343a40;
 }
 
-#sidebar {
-min-width: 300px;
-max-width: 300px;
-min-height: 100vh;
-color: #fff;
-transition: all 0.3s;
-font-weight: 300;
-font-size: 1rem;
-line-height: 1.5;
+.sidebar {
+  width: 250px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  z-index: 999;
+  background: #002e50;
+  color: #fff;
+  transition: all 0.3s;
+  margin-top: 56px;
 }
 
-#sidebar.hidden {
+.sidebar.hidden {
   margin-left: -300px;
 }
 
-a[data-toggle="collapse"] {
+a[data-toggle='collapse'] {
   position: relative;
 }
 
-a, a:hover, a:focus {
+a,
+a:hover,
+a:focus {
   color: inherit;
 }
 
-#sidebar .sidebar-header {
+.sidebar .sidebar-header {
   padding: 20px;
 }
 
-#sidebar ul li a {
-padding: 15px;
-display: block;
-width: 100%;
-&:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-}
+.sidebar ul li a {
+  padding: 15px;
+  display: block;
+  width: 100%;
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+  }
 }
 
 hr {
-border-top: 1px solid #fff;
-margin-top: 0;
+  border-top: 1px solid #fff;
+  margin-top: 0;
 }
