--- a/newworkspace/glotrix/libs/ui/components/navigation/src/lib/top-bar/top-bar.component.html
+++ b/newworkspace/glotrix/libs/ui/components/navigation/src/lib/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark orange-background">
-    <button class="navbar-toggler" type="button" (click)="toggleSideBar()" data-target="#navbarsDefault"
-            aria-controls="navbarsDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" (click)="toggleSideBar()">
       <span class="navbar-toggler-icon"></span>
     </button>
     <glotrix-img-rounded class="right-padding  float-right" [source]="'https://m.media-amazon.com/images/S/aplus-media/mg/dbf4301f-af40-46f2-9a87-a99deddcd9a2._SL300__.jpg'"></glotrix-img-rounded>
 </nav>
+<glotrix-side-bar [linkOptions]="linkOptions" [ngClass]="{'collapse': isCollapsed }"></glotrix-side-bar>
