--- a/newworkspace/glotrix/apps/cms/src/app/profile-editor/profile/profile.component.html
+++ b/newworkspace/glotrix/apps/cms/src/app/profile-editor/profile/profile.component.html
@@ -1,5 +1,8 @@
 <br>
-<form class="round-border">
+<glotrix-form-builder [entries]="entries">
+
+</glotrix-form-builder>
+<!-- <form class="round-border">
   <glotrix-container>
     <glotrix-row>
       <glotrix-col [sm]='3'>
@@ -68,4 +71,4 @@
 
     </glotrix-col>
   </glotrix-row>
-</form>
+</form> -->
