--- a/newworkspace/glotrix/libs/ui/forms/src/lib/form-builder/form-builder.component.html
+++ b/newworkspace/glotrix/libs/ui/forms/src/lib/form-builder/form-builder.component.html
@@ -1,12 +1,13 @@
-<div>
+<div class="container">
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
-    <div *ngFor="let entry of entries" class="form-row">
-      <glotrix-form-entry [entry]="entry" [form]="form" [displayMessage]="displayMessage"></glotrix-form-entry>
-    </div>
+    <section class="row">
+      <ng-container *ngFor="let entry of entries">
+        <glotrix-form-entry [entry]="entry" [form]="form" class="col-4"></glotrix-form-entry>
+      </ng-container>
+    </section>
     <div class="form-row pull-right">
       <button type="button" class="btn btn-secondary mr-3">Cancelar</button>
       <button type="submit" class="btn btn-primary" [disabled]="!(form.valid && form.dirty)">Guardar</button>
-      <!-- <button type="submit" [disabled]="!form.valid">Save</button> -->
     </div>
   </form>
 </div>
