--- a/newworkspace/glotrix/apps/store/src/app/app.component.html
+++ b/newworkspace/glotrix/apps/store/src/app/app.component.html
@@ -1,7 +1,6 @@
-<glotrix-container>
-  <glotrix-row>
-    <glotrix-col [md]='8' [xs]='12'>a</glotrix-col>
-    <glotrix-col [md]='4' [xs]='6'>b</glotrix-col>
-  </glotrix-row>
-</glotrix-container>
+<section class="row">
+  <div gtCol md="6" class="yolo 2">A</div>
+  <div gtCol md="6">A</div>
+</section>
+
 <router-outlet></router-outlet>
