make it work again

--- a/newworkspace/glotrix/apps/cms/src/app/layout/dashboard-layout/dashboard-layout.component.html
+++ b/newworkspace/glotrix/apps/cms/src/app/layout/dashboard-layout/dashboard-layout.component.html
@@ -1,6 +1,6 @@
 <header>
-  <glotrix-top-bar [linkOptions]="options"></glotrix-top-bar>
+  <gt-top-bar [linkOptions]="options"></gt-top-bar>
 </header>
 <div>
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
