--- a/newworkspace/glotrix/apps/cms/src/app/dashboard/profile-editor/profile/profile.component.html
+++ b/newworkspace/glotrix/apps/cms/src/app/dashboard/profile-editor/profile/profile.component.html
@@ -2,7 +2,7 @@
 <form class="round-border">
   <div class="container">
     <section class="row">
-      <section class="col-3">
+      <section class="col-sm-3">
         <gt-avatar
           [width]="200"
           [height]="200"
@@ -12,21 +12,21 @@
         >
         </gt-avatar>
       </section>
-      <section class="col-9">
+      <section class="col-sm-9">
         <section class="row">
-          <section class="col-4">
+          <section class="col-sm-4">
             <div class="form-group pr-3">
               <label for="name">Nombre</label>
               <input type="text" class="form-control" id="name" required />
             </div>
           </section>
-          <section class="col-4">
+          <section class="col-sm-4">
             <div class="form-group pr-3">
               <label for="lastname">Apellido</label>
               <input type="text" class="form-control" id="lastname" required />
             </div>
           </section>
-          <section class="col-4">
+          <section class="col-sm-4">
             <div class="form-group">
               <label for="facebook">Facebook</label>
               <input type="text" class="form-control" id="facebook" required />
@@ -34,19 +34,19 @@
           </section>
         </section>
         <section class="row">
-          <section class="col-4">
+          <section class="col-sm-4">
             <div class="form-group pr-3">
               <label for="twitter">Twitter</label>
               <input type="text" class="form-control" id="twitter" required />
             </div>
           </section>
-          <section class="col-4">
+          <section class="col-sm-4">
             <div class="form-group pr-3">
               <label for="instagram">Instagram</label>
               <input type="text" class="form-control" id="instagram" required />
             </div>
           </section>
-          <section class="col-4">
+          <section class="col-sm-4">
             <div class="form-group">
               <label for="website">Website</label>
               <input type="text" class="form-control" id="website" required />
