--- a/newworkspace/glotrix/libs/ui/avatar/src/lib/avatar/avatar.component.html
+++ b/newworkspace/glotrix/libs/ui/avatar/src/lib/avatar/avatar.component.html
@@ -2,5 +2,5 @@
   [src]="source"
   [width]="width"
   [height]="height"
-  class="rounded-circle border-grey"
+  class="rounded-circle border-grey img-fluid"
 />
