--- a/newworkspace/glotrix/libs/ui/navigation/src/lib/side-bar/side-bar.component.scss
+++ b/newworkspace/glotrix/libs/ui/navigation/src/lib/side-bar/side-bar.component.scss
@@ -1,48 +1,35 @@
 :host {
   background: #343a40;
 }
-
-.sidebar {
-  width: 250px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  z-index: 999;
+#sidebar-wrapper {
+  min-height: 100vh;
+  margin-left: -15rem;
+  transition: margin 0.25s ease-out;
   background: #002e50;
   color: #fff;
-  transition: all 0.3s;
-  margin-top: 56px;
-}
-
-.sidebar.hidden {
-  margin-left: -300px;
-}
-
-a[data-toggle='collapse'] {
-  position: relative;
-}
-
-a,
-a:hover,
-a:focus {
-  color: inherit;
-}
-
-.sidebar .sidebar-header {
-  padding: 20px;
-}
-
-.sidebar ul li a {
-  padding: 15px;
-  display: block;
-  width: 100%;
-  &:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+  .sidebar-heading {
+    padding: 0.875rem 1.25rem;
+    font-size: 1.2rem;
+  }
+  .list-group {
+    width: 15rem;
+  }
+  .list-group-item {
+    background: transparent;
+    color: white;
   }
 }
 
-hr {
-  border-top: 1px solid #fff;
-  margin-top: 0;
+#sidebar-wrapper.toggled {
+  margin-left: 0;
+}
+
+@media (min-width: 768px) {
+  #sidebar-wrapper {
+    margin-left: 0;
+  }
+
+  #sidebar-wrapper.toggled {
+    margin-left: -15rem;
+  }
 }
