--- a/glotrix/apps/cms/src/app/dashboard/product-manager/product-mamager/product-mamager.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/product-manager/product-mamager/product-mamager.component.html
@@ -1,1 +1,43 @@
-<h1>product-mamager works!</h1>
+<div class="container p-5">
+  <div class="row">
+    <div class="col-3">
+      <gt-search-bar placeholder="Search for a product name"></gt-search-bar>
+    </div>
+    <div class="col-3">
+      <select class="form-control">
+        <option>Select a category</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 p-3">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Description</th>
+            <th scope="col">Price</th>
+            <th scope="col">Quantity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let product of products; index as i">
+            <th scope="row">{{ i + 1 }}</th>
+            <td>{{ product.name }}</td>
+            <td>{{ product.description}}</td>
+            <td>{{ product.price | currency }}</td>
+            <td>{{ product.quantity | number }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-12">
+      <gt-pagination></gt-pagination>
+    </div>
+  </div>
+</div>
