--- a/glotrix/libs/ui/forms/src/lib/form-entry/form-entry.component.html
+++ b/glotrix/libs/ui/forms/src/lib/form-entry/form-entry.component.html
@@ -1,46 +1,32 @@
 <ng-container [formGroup]="form">
-  <!--gtRow -->
   <ng-container [ngSwitch]="entry.controlType">
+
     <div *ngSwitchCase="'textbox'" class="form-group ">
-      <!--gtCol [sm]='entry.col'-->
       <label [attr.for]="entry.key">{{ entry.label }}</label>
-      <input
-        class="form-control"
-        type="text"
-        [id]="entry.key"
-        [formControlName]="entry.key"
-        [ngClass]="{ 'is-invalid': !isValid }"
-      />
-      <small *ngIf="entry.maxLength"
-        >{{ texbox.value.length }} / {{ entry.maxLength }}</small
-      >
-      <div *ngIf="!isValid" class="invalid-feedback">
+      <input class="form-control" type="text" [id]="entry.key" [formControlName]="entry.key"
+        [ngClass]="{ 'is-invalid': !isValid && isSubmitted }" />
+      <small *ngIf="entry.maxLength">{{ texbox.value.length }} / {{ entry.maxLength }}</small>
+      <div *ngIf="!isValid && isSubmitted" class="invalid-feedback">
         <p *ngFor="let error of errors">{{ getErrorMessage(error) }}</p>
       </div>
     </div>
 
     <div *ngSwitchCase="'textblock'" class="form-group ">
-      <!--gtCol [sm]='entry.col'-->
       <label [attr.for]="entry.key">{{ entry.label }}</label>
       <textarea class="form-control" [id]="entry.key" [rows]="entry.rows">
       </textarea>
-      <small *ngIf="entry.maxLength"
-        >{{ textblock.value.length }} / {{ entry.maxLength }}</small
-      >
-      <div *ngIf="!isValid" class="invalid-feedback">
+      <small *ngIf="entry.maxLength">{{ textblock.value.length }} / {{ entry.maxLength }}</small>
+      <div *ngIf="!isValid && isSubmitted" class="invalid-feedback">
         <p *ngFor="let error of errors">{{ getErrorMessage(error) }}</p>
       </div>
     </div>
 
     <div *ngSwitchCase="'dropdown'" class="form-group ">
-      <!--gtCol [sm]='entry.col'-->
       <label [attr.for]="entry.key">{{ entry.label }}</label>
       <select [id]="entry.key" [formControlName]="entry.key">
-        <option *ngFor="let opt of entry.options" [value]="opt.key">{{
-          opt.value
-        }}</option>
+        <option *ngFor="let opt of entry.options" [value]="opt.key">{{opt.value}}</option>
       </select>
-      <div *ngIf="!isValid" class="invalid-feedback">
+      <div *ngIf="!isValid && isSubmitted" class="invalid-feedback">
         <p *ngFor="let error of errors">{{ getErrorMessage(error) }}</p>
       </div>
     </div>
