--- a/glotrix/apps/cms/src/app/dashboard/sales/sales-manager/sales-manager.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/sales/sales-manager/sales-manager.component.html
@@ -20,24 +20,16 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Price</th>
             <th scope="col">Quantity</th>
-            <th scope="col">See More</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
+            <th scope="col">Delivery State</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor="let product of products; index as i">
             <th scope="row">{{ i + 1 }}</th>
             <td>{{ product.name }}</td>
-            <td>{{ product.description}}</td>
-            <td>{{ product.price | currency }}</td>
             <td>{{ product.quantity | number }}</td>
-            <td>See More</td>
-            <td>Edit</td>
-            <td>Delete</td>
+            <td>{{ product.state}}</td>
           </tr>
         </tbody>
       </table>
