--- a/glotrix/apps/cms/src/app/dashboard/analytics/analytics/analytics.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/analytics/analytics/analytics.component.html
@@ -1,5 +1,3 @@
-<section class="container">
-  <section class="row">
-    <gt-active-users-report class="col-sm-6"></gt-active-users-report>
-  </section>
+<section class="container-fluid row">
+  <gt-active-users-report class="col-lg-6"></gt-active-users-report>
 </section>
