--- a/glotrix/apps/cms/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
@@ -9,6 +9,8 @@
       [linkOptions]="options"
       [(isSidebarActive)]="isSidebarActive"
     ></gt-top-bar>
-    <router-outlet class="row"></router-outlet>
+    <div class="container">
+      <router-outlet></router-outlet>
+    </div>
   </section>
 </section>
