--- a/glotrix/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.html
@@ -6,14 +6,18 @@
     <div class="row col-12 pt-3">
       <h2>{{product.name}}</h2>
     </div>
-    <div class="row col-12 pt-3">
+    <hr>
+    <div class="row col-12">
       <h5>{{product.category}}</h5>
     </div>
-    <div class="row col-12 bold pt-3">
+    <hr>
+    <div class="row col-12 bold">
       <span>{{product.price | currency}}</span>
       <span class="pl-5">Stock: {{product.quantity | number}} units</span>
     </div>
-    <div class="row col-12 pt-3">
+    <hr>
+    <div class="row col-12">
+      <p class="bold">Description:</p>
       <p class="justify">{{product.description}}</p>
     </div>
   </div>
