--- a/glotrix/libs/ui/forms/src/lib/form-builder/form-builder.component.html
+++ b/glotrix/libs/ui/forms/src/lib/form-builder/form-builder.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pt-4">
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
     <section class="row">
       <ng-container *ngFor="let entry of entries">
