--- a/glotrix/libs/ui/navigation/src/lib/side-bar/side-bar.component.html
+++ b/glotrix/libs/ui/navigation/src/lib/side-bar/side-bar.component.html
@@ -24,14 +24,14 @@
     *ngFor="let linkOption of linkOptions"
   >
     <a
-      routerLink="{{ linkOption.Url }}"
+      routerLink="{{ linkOption.url }}"
       class="list-group-item list-group-item-action "
     >
-      <i class="fa fa-fw fa-search"></i>{{ linkOption.Text }}</a
+      <i class="fa fa-fw fa-search"></i>{{ linkOption.text }}</a
     >
   </div>
 </div>
-<!-- 
+<!--
 <nav class="sidebar navbar-dark blue-background">
   <div class="container pt-3">
     <article class="row single-post no-gutters">
