--- a/glotrix/apps/cms/src/app/dashboard/product-editor/product/product.component.scss
+++ b/glotrix/apps/cms/src/app/dashboard/product-editor/product/product.component.scss
@@ -1,4 +1,11 @@
-.boder-rounded {
+.orange-border {
   border-radius: 25px;
   border: 2px solid #f89937;
+  height: 100%;
+}
+.blue-border {
+  border-radius: 25px;
+  border: 2px solid #2c7ff1;
+  padding: 20px;
+  height: 100%;
 }
