--- a/glotrix/apps/cms/src/app/dashboard/product-manager/product-mamager/product-mamager.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/product-manager/product-mamager/product-mamager.component.html
@@ -1,14 +1,11 @@
 <div class="container p-5">
   <section class="row">
-    <gt-search-bar
-      placeholder="Search for a product name"
-      class="col-sm-6"
-    ></gt-search-bar>
+    <gt-search-bar placeholder="Search for a product name" class="col-sm-6"></gt-search-bar>
     <gt-category-filter class="col-sm-6"></gt-category-filter>
   </section>
 
   <section class="row">
-    <gt-table-main class="col-sm-12" [products]="products"></gt-table-main>
+    <gt-table-main class="col-sm-12" [products]="products$ | async"></gt-table-main>
   </section>
 
   <section class="row">
