--- a/glotrix/libs/ui/navigation/src/lib/side-bar/side-bar.component.html
+++ b/glotrix/libs/ui/navigation/src/lib/side-bar/side-bar.component.html
@@ -3,62 +3,19 @@
     <article class="row single-post no-gutters">
       <div class="col-md-12">
         <div class="image-wrapper float-left pr-3">
-          <gt-avatar
-            [width]="60"
-            [height]="60"
-            [source]="
-              'https://m.media-amazon.com/images/S/aplus-media/mg/dbf4301f-af40-46f2-9a87-a99deddcd9a2._SL300__.jpg'
-            "
-          >
+          <gt-avatar [width]="60" [height]="60" [source]="userData?.photoUrl">
           </gt-avatar>
         </div>
         <div class="single-post-content-wrapper p-3">
-          <span>Belatrix User</span>
+          <span>{{ userData?.fullName }}</span>
         </div>
       </div>
     </article>
   </div>
 
-  <div
-    class="list-group list-group-flush"
-    *ngFor="let linkOption of linkOptions"
-  >
-    <a
-      routerLink="{{ linkOption.url }}"
-      class="list-group-item list-group-item-action "
-    >
+  <div class="list-group list-group-flush" *ngFor="let linkOption of linkOptions">
+    <a routerLink="{{ linkOption.url }}" class="list-group-item list-group-item-action ">
       <i class="fa fa-fw fa-search"></i>{{ linkOption.text }}</a
     >
   </div>
 </div>
-<!--
-<nav class="sidebar navbar-dark blue-background">
-  <div class="container pt-3">
-    <article class="row single-post no-gutters">
-      <div class="col-md-12">
-        <div class="image-wrapper float-left pr-3">
-          <gt-avatar
-            [width]="60"
-            [height]="60"
-            [source]="
-              'https://m.media-amazon.com/images/S/aplus-media/mg/dbf4301f-af40-46f2-9a87-a99deddcd9a2._SL300__.jpg'
-            "
-          >
-          </gt-avatar>
-        </div>
-        <div class="single-post-content-wrapper p-3">
-          <span>Belatrix User</span>
-        </div>
-      </article>
-      </div>
-  </div>
-
-  <ul class="navbar-nav" *ngFor="let linkOption of linkOptions">
-    <li class="nav-item">
-      <a class="nav-link" routerLink="{{ linkOption.Url }}">
-        <i class="fa fa-fw fa-search"></i>
-        {{ linkOption.Text }}
-      </a>
-    </li>
-  </ul>
-</nav> -->
