--- a/glotrix/apps/cms/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
@@ -1,12 +1,13 @@
 <section class="d-flex">
   <gt-side-bar
+    [userData]="this.user$ | async"
     [linkOptions]="options"
     [isSidebarActive]="isSidebarActive"
   ></gt-side-bar>
 
   <section id="#page-content-wrapper" class="flex-fill">
     <gt-top-bar
-      [linkOptions]="options"
+      [userData]="this.user$ | async"
       [(isSidebarActive)]="isSidebarActive"
     ></gt-top-bar>
     <div class="container">
