--- a/glotrix/libs/ui/navigation/src/lib/top-bar/top-bar.component.html
+++ b/glotrix/libs/ui/navigation/src/lib/top-bar/top-bar.component.html
@@ -2,10 +2,5 @@
   <button class="navbar-toggler" type="button" (click)="toggleSideBar()">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <gt-avatar
-    class="right-padding float-right "
-    [source]="
-      'https://m.media-amazon.com/images/S/aplus-media/mg/dbf4301f-af40-46f2-9a87-a99deddcd9a2._SL300__.jpg'
-    "
-  ></gt-avatar>
+  <gt-avatar class="right-padding float-right " [source]="userData?.photoUrl"></gt-avatar>
 </nav>
