--- a/glotrix/apps/cms/src/app/dashboard/product-editor/product/product.component.scss
+++ b/glotrix/apps/cms/src/app/dashboard/product-editor/product/product.component.scss
@@ -6,7 +6,7 @@
 }
 .blue-border {
   border-radius: 25px;
-  border: 2px solid #2c7ff1;
+  border: 2px solid #8181f7;
   padding: 20px;
   height: 100%;
 }
