--- a/glotrix/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.html
+++ b/glotrix/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.html
@@ -1,7 +1,7 @@
 <div class="row pl-3 pt-3">
   <div class="col-sm-5">
     <section class="blue-border">
-      <gt-images-upload (filesLoaded)="onFilesLoaded($event)"></gt-images-upload>
+      <gt-images-upload [(images)]="product.images"></gt-images-upload>
     </section>
   </div>
   <div class="col-sm-7">
