--- a/glotrix/libs/ui/image-preview/src/lib/image-preview/image-preview.component.html
+++ b/glotrix/libs/ui/image-preview/src/lib/image-preview/image-preview.component.html
@@ -1,3 +1,1 @@
-<div class="image-preview mb-3">
-  <img [src]="previewImageUrl" class="img-fluid" />
-</div>
+<img [src]="previewImageUrl" class="img-fluid mini-img" />
