--- a/glotrix/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.scss
+++ b/glotrix/apps/cms/src/app/dashboard/product-manager/product-detail/product-detail.component.scss
@@ -1,16 +1,12 @@
-.boder-rounded {
+.orange-border {
   border-radius: 25px;
   border: 2px solid #f89937;
+  height: 100%;
+  padding: 20px;
 }
-.justify {
-  text-align: justify;
-}
-.bold {
-  font-weight: 600;
-}
-.orange {
-  color: #f89937;
-}
-h2 {
-  color: #f89937;
+.blue-border {
+  border-radius: 25px;
+  border: 2px solid #8181f7;
+  padding: 20px;
+  height: 100%;
 }
