--- a/glotrix/libs/ui/forms/src/lib/form-builder/form-builder.component.html
+++ b/glotrix/libs/ui/forms/src/lib/form-builder/form-builder.component.html
@@ -1,13 +1,15 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="form">
-  <section class="row">
-    <ng-container *ngFor="let entry of entries">
-      <gt-form-entry [entry]="entry" [form]="form" [class]="entry.col" [isSubmitted]="isSubmitted"></gt-form-entry>
-    </ng-container>
-  </section>
-  <div class="form-row pull-right">
-    <button type="button" class="btn btn-secondary mr-3">Cancelar</button>
-    <button type="submit" class="btn btn-primary" [disabled]="!(form.valid && form.dirty)">
-      Guardar
-    </button>
-  </div>
-</form>
+<div class="form-container">
+  <form (ngSubmit)="onSubmit()" [formGroup]="form">
+    <section class="row">
+      <ng-container *ngFor="let entry of entries">
+        <gt-form-entry [entry]="entry" [form]="form" [class]="entry.col" [isSubmitted]="isSubmitted"></gt-form-entry>
+      </ng-container>
+    </section>
+    <div class="form-row pull-right">
+      <button type="button" class="btn btn-secondary mr-3">Cancelar</button>
+      <button type="submit" class="btn btn-primary" [disabled]="!(form.valid && form.dirty)">
+        Guardar
+      </button>
+    </div>
+  </form>
+</div>
