--- a/glotrix/libs/ui/images-upload/src/lib/images-upload/images-upload.component.html
+++ b/glotrix/libs/ui/images-upload/src/lib/images-upload/images-upload.component.html
@@ -1,26 +1,28 @@
-<div class="col-sm-12">
-  <gt-upload-file (fileLoaded)="onFileLoaded($event)"></gt-upload-file>
-</div>
-<div class="col-sm-12">
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Filename</th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let file of files; index as i">
-        <th scope="row">{{i+1}}</th>
-        <td>{{file.name}}</td>
-        <td (click)="previewImage(file)"><span class="fa fa-search"></span></td>
-        <td (click)="removeImage(file)"><span class="fa fa-trash"></span></td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<div class="col-sm-12">
-  <gt-image-preview *ngIf="fileSelected" [file]="fileSelected"></gt-image-preview>
+<div class="row">
+  <div class="col-sm-12">
+    <gt-upload-file (fileLoaded)="onFileLoaded($event)"></gt-upload-file>
+  </div>
+  <div class="col-sm-12">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Image Name</th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let image of images; index as i">
+          <th scope="row">{{i+1}}</th>
+          <td>{{image.name}}</td>
+          <td (click)="previewImage(image)"><span class="fa fa-search"></span></td>
+          <td (click)="removeImage(image, i)"><span class="fa fa-trash"></span></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-sm-6 ml-sm-auto mr-sm-auto col-10 ml-auto mr-auto">
+    <gt-image-preview *ngIf="imageSelected" [image]="imageSelected"></gt-image-preview>
+  </div>
 </div>
